// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NowPlayingCard > matches snapshot when paused 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="group block w-full no-underline focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-nav-link rounded-2xl dark:focus-visible:ring-nav-hover"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="relative grid w-full grid-cols-[auto_1fr] items-center gap-x-4 gap-y-3 overflow-hidden rounded-2xl border border-glass-border/60 bg-gradient-to-br from-glass/80 via-glass/70 to-glass/60 px-5 py-5 backdrop-blur-xl shadow-[0_8px_24px_rgba(0,0,0,0.12)] transition-all duration-300 hover:border-nav-link/40 hover:shadow-[0_12px_32px_rgba(0,94,162,0.2)] dark:border-glass-border/50 dark:from-glass/60 dark:via-glass/50 dark:to-glass/40 dark:shadow-[0_8px_24px_rgba(0,0,0,0.3)] dark:hover:border-nav-link-hover/50 dark:hover:shadow-[0_12px_32px_rgba(127,182,230,0.18)]"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="relative h-16 w-16 overflow-hidden rounded-xl shadow-[0_8px_20px_rgba(0,0,0,0.25)] ring-2 ring-glass-border/30 transition-all duration-300 group-hover:ring-nav-link/40 dark:ring-glass-border/20 dark:group-hover:ring-nav-link-hover/40"
    >
      <img
        alt="Album"
        class="h-full w-full rounded-xl object-cover scale-[1.015] transition-transform duration-[900ms] ease-out group-hover:scale-[1.03]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="flex min-w-0 flex-col gap-2.5"
    >
      <h3
        class="text-base font-extrabold leading-tight tracking-tight text-page-foreground line-clamp-1"
      >
        Test Track
      </h3>
      <p
        class="text-sm font-medium text-secondary/90 line-clamp-1"
      >
        Tester
      </p>
      <span
        class="inline-flex w-fit items-center rounded-full border border-glass-border/60 bg-glass/60 px-3 py-1 text-xs font-bold uppercase tracking-wider text-secondary/80 backdrop-blur-sm dark:border-glass-border/50 dark:bg-glass/50"
      >
        Paused
      </span>
      <div
        class="flex w-full items-center gap-3"
      >
        <div
          aria-label="Track progress"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="17"
          class="relative h-2 flex-1 overflow-hidden rounded-full bg-glass-border/40 dark:bg-glass-border/30"
          role="progressbar"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-[#1db954] to-[#1ed760] shadow-[0_0_8px_rgba(29,185,84,0.4)]"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="whitespace-nowrap text-xs font-medium text-secondary/80"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`NowPlayingCard > matches snapshot when playing 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="group block w-full no-underline focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-nav-link rounded-2xl dark:focus-visible:ring-nav-hover"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="relative grid w-full grid-cols-[auto_1fr] items-center gap-x-4 gap-y-3 overflow-hidden rounded-2xl border border-glass-border/60 bg-gradient-to-br from-glass/80 via-glass/70 to-glass/60 px-5 py-5 backdrop-blur-xl shadow-[0_8px_24px_rgba(0,0,0,0.12)] transition-all duration-300 hover:border-nav-link/40 hover:shadow-[0_12px_32px_rgba(0,94,162,0.2)] dark:border-glass-border/50 dark:from-glass/60 dark:via-glass/50 dark:to-glass/40 dark:shadow-[0_8px_24px_rgba(0,0,0,0.3)] dark:hover:border-nav-link-hover/50 dark:hover:shadow-[0_12px_32px_rgba(127,182,230,0.18)]"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="relative h-16 w-16 overflow-hidden rounded-xl shadow-[0_8px_20px_rgba(0,0,0,0.25)] ring-2 ring-glass-border/30 transition-all duration-300 group-hover:ring-nav-link/40 dark:ring-glass-border/20 dark:group-hover:ring-nav-link-hover/40"
    >
      <img
        alt="Album"
        class="h-full w-full rounded-xl object-cover scale-[1.015] transition-transform duration-[900ms] ease-out group-hover:scale-[1.03]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="flex min-w-0 flex-col gap-2.5"
    >
      <h3
        class="text-base font-extrabold leading-tight tracking-tight text-page-foreground line-clamp-1"
      >
        Test Track
      </h3>
      <p
        class="text-sm font-medium text-secondary/90 line-clamp-1"
      >
        Tester
      </p>
      <div
        class="flex w-full items-center gap-3"
      >
        <div
          aria-label="Track progress"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="17"
          class="relative h-2 flex-1 overflow-hidden rounded-full bg-glass-border/40 dark:bg-glass-border/30"
          role="progressbar"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-[#1db954] to-[#1ed760] shadow-[0_0_8px_rgba(29,185,84,0.4)]"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="whitespace-nowrap text-xs font-medium text-secondary/80"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;
